--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -9,6 +9,9 @@ $color-text-dark: #1a1a1a;
 
 $gradient-primary: linear-gradient(135deg, #9b5cff, #6c63ff);
 $gradient-accent: linear-gradient(135deg, #ff4f81, #ff8a00);
+$gradient-circle1: linear-gradient(135deg, #4fff84, #ff0008);
+$gradient-circle2: linear-gradient(135deg, #b04fff, #d9ff00);
+$gradient-circle3: linear-gradient(135deg, #ffc74f, #6a00ff);
 
 $font-primary: "Poppins", sans-serif;
 
