--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -4,15 +4,15 @@
   position: sticky;
   top: 0;
   width: 100%;
-  background: c.$gradient-primary;
-  color: c.$color-text-dark;
+  background: var(--gradient-primary);
+  color: var(--color-text);
   z-index: 1000;
   @include c.glass(10px, rgba(255, 255, 255, 0.05));
 
   &__container {
     @include c.flex-center;
     justify-content: space-between;
-    padding: c.$spacing-sm 0;
+    padding: var(--spacing-sm) 0;
   }
 
   &__logo {
@@ -22,18 +22,18 @@
 
   .header__nav {
     display: flex;
-    gap: c.$spacing-sm;
+    gap: var(--spacing-sm);
 
     .nav__list {
       display: flex;
-      gap: c.$spacing-sm;
+      gap: var(--spacing-sm);
 
       .nav__link {
         font-weight: 500;
-        transition: c.$transition;
+        transition: var(--transition);
 
         &:hover {
-          color: c.$color-accent;
+          color: var(--color-accent);
         }
       }
     }
@@ -42,9 +42,9 @@
       position: absolute;
       top: 100%;
       right: 0;
-      background: c.$color-bg-dark;
+      background: var(--color-bg-dark);
       flex-direction: column;
-      padding: c.$spacing-sm;
+      padding: var(--spacing-sm);
       display: none;
 
       &.active {
@@ -67,10 +67,11 @@
   .burger__line {
     width: 100%;
     height: 2px;
-    background: c.$color-text-light;
+    background: var(--color-text-light);
   }
 
   @include c.respond(mobile) {
     display: flex;
   }
 }
+
