added footer and about + some fixes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,9 @@
 @use "core/index";
 @use "components/_header";
+@use "components/_footer";
 @use "components/_hero";
 @use "components/_services";
+@use "components/_about";
 @use "components/_cta";
 @use "components/_themes";
 @use "components/_theme-switcher";
