--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -2,7 +2,7 @@
 
 .about {
   padding: var(--spacing-lg) 0;
-  background: var(--color-bg-light);
+  background: var(--color-bg);
   color: var(--color-text-dark);
 
   .about__container {
@@ -66,7 +66,7 @@
       p {
         margin-top: 0.5rem;
         font-size: 1rem;
-        color: var(--color-text-light);
+        color: var(--color-text);
       }
 
       /* Анімований контур */
