--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -42,13 +42,21 @@
       position: absolute;
       top: 100%;
       right: 0;
-      background: var(--color-bg-dark);
+      // background: var(--color-bg);
       flex-direction: column;
       padding: var(--spacing-sm);
       display: none;
-
+      
       &.active {
+        height: 100vh;
+        width: 250px;
         display: flex;
+        @include c.glass(10px, rgba(255, 255, 255, 0.05));
+        .nav__list {
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
       }
     }
   }
@@ -67,11 +75,27 @@
   .burger__line {
     width: 100%;
     height: 2px;
-    background: var(--color-text-light);
+    background: var(--color-text);
+    transition: 0.3s;
   }
 
   @include c.respond(mobile) {
     display: flex;
   }
+
+  /* Активний стан */
+  &.active {
+    .burger__line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 6px);
+    }
+    .burger__line:nth-child(2) {
+      opacity: 0;
+    }
+    .burger__line:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -6px);
+    }
+  }
 }
+
+
 
