--- a/scss/core/_mixins.scss
+++ b/scss/core/_mixins.scss
@@ -1,10 +1,4 @@
-@mixin respond($device) {
-  @if $device == mobile {
-    @media (max-width: 768px) {
-      @content;
-    }
-  }
-}
+
 
 @mixin flex-center {
   display: flex;
@@ -35,13 +29,13 @@
   place-items: center;
 }
 
-// MEDIA QUERY HELPERS
+// MEDIA QUERY HELPER
 @mixin respond($breakpoint) {
-  @if $breakpoint == sm {
-    @media (max-width: 480px) { @content; }
-  }
-  @else if $breakpoint == md {
+  @if $breakpoint == mobile or $breakpoint == md {
     @media (max-width: 768px) { @content; }
+  }
+  @else if $breakpoint == sm {
+    @media (max-width: 480px) { @content; }
   }
   @else if $breakpoint == lg {
     @media (max-width: 1024px) { @content; }
