--- a/scss/components/_theme-switcher.scss
+++ b/scss/components/_theme-switcher.scss
@@ -50,11 +50,12 @@
   }
 
   .sun {
-    margin-left: 1px;
+    margin-left: 2px;
+    color: yellow;
   }
 
   .moon {
-    margin-right: 1px;
+    margin-right: 4px;
   }
 
   /* When checked */
