--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -63,6 +63,7 @@ $bp-sm: 480px;
 
   --shadow-card: #{$shadow-card};
   --shadow-glow: #{$shadow-glow};
+  --shadow-neon-green: #{$shadow-neon-green};
   --shadow-hover-purple: #{$shadow-hover-purple};
 
   --spacing-xs: #{$spacing-xs};
