--- a/scss/core/_mixins.scss
+++ b/scss/core/_mixins.scss
@@ -1,5 +1,3 @@
-
-
 @mixin flex-center {
   display: flex;
   justify-content: center;
@@ -11,7 +9,6 @@
   justify-content: space-between;
   align-items: center;
 }
-
 
 @mixin flex-start {
   display: flex;
@@ -29,16 +26,19 @@
   place-items: center;
 }
 
-// MEDIA QUERY HELPER
 @mixin respond($breakpoint) {
   @if $breakpoint == mobile or $breakpoint == md {
-    @media (max-width: 768px) { @content; }
-  }
-  @else if $breakpoint == sm {
-    @media (max-width: 480px) { @content; }
-  }
-  @else if $breakpoint == lg {
-    @media (max-width: 1024px) { @content; }
+    @media (max-width: 768px) {
+      @content;
+    }
+  } @else if $breakpoint == sm {
+    @media (max-width: 480px) {
+      @content;
+    }
+  } @else if $breakpoint == lg {
+    @media (max-width: 1024px) {
+      @content;
+    }
   }
 }
 
