--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,4 @@
 @use "components/_themes";
 @use "components/_theme-switcher";
 @use "components/_innovation.scss";
+@use "components/_portfolio.scss";
