--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,3 +9,4 @@
 @use "components/_theme-switcher";
 @use "components/_innovation.scss";
 @use "components/_portfolio.scss";
+@use "components/_testimonials.scss";
