mobile menu imp with glassmorphism

--- a/scss/core/_mixins.scss
+++ b/scss/core/_mixins.scss
@@ -39,6 +39,10 @@
     @media (max-width: 1024px) {
       @content;
     }
+  } @else if $breakpoint == desktop or $breakpoint == xl {
+    @media (min-width: 1025px) {
+      @content;
+    }
   }
 }
 
