--- a/scss/core/_base.scss
+++ b/scss/core/_base.scss
@@ -19,6 +19,11 @@ body {
   line-height: 1.6;
 }
 
+body.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
 a {
   text-decoration: none;
   color: inherit;
