--- a/scss/components/_innovation.scss
+++ b/scss/components/_innovation.scss
@@ -1,7 +1,7 @@
 @use "../core" as c;
 
 .innovation {
-  padding: var(--spacing-xl) 0;
+  padding: var(--spacing-lg) 0;
   background: var(--gradient-secondary);
   color: var(--color-text);
 
